--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@expo/vector-icons": "^4.0.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
     "native-base": "^2.1.2",
     "react": "16.0.0-alpha.6",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
     "react-test-renderer": "16.0.0-alpha.6"
