--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@expo/vector-icons": "^4.0.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
+    "fetch-on-rest": "^2.0.4",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
